
2016-03-15  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 38155: Doc/Zsh/compsys.yo: docs: compsys: Clarify documentation
	of the 'filter' style.

2016-03-15  m0viefreak  <m0viefreak.cm@googlemail.com>

	* 38151: Completion/Unix/Command/_git: fix tag name of remote
	branches

	* 38148: Completion/Unix/Command/_git: reflog: complete
	references next to commands

2016-03-11  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 38135: Src/Zle/complete.c: internal: bin_compadd: Add a
	few comments.

	* 38129: Completion/Unix/Command/_git: Fix __git_ignore_line's
	treatment of shell and pattern metacaracters.

2016-03-10  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 38128: Completion/Unix/Command/_git: Fix completion of diffs
	against the index when treeish isn't shell-safe

	* 38123 (after 38074): Completion/Unix/Command/_git: _git reset
	$treeish: complete only staged files

2016-03-09  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 38120: Completion/Unix/Command/_git: Document the internal
	helper function __git_ignore_line.

2016-03-08  Peter Stephenson  <p.stephenson@samsung.com>

	* 38114: Src/exec.c: In substitutions involving subshells, disable
	signals that require interactive handling.

2016-03-09  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* unposted: .gitignore: update for 38108

2016-03-08  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 38074: Completion/Unix/Command/_git: _git reset HEAD:
	complete only staged files

	* 38108: Config/defs.mk.in, Doc/Makefile.in, Doc/ztexi.yo,
	configure.ac: enable to create both zsh_{a4,us}.pdf

2016-03-07  Oliver Kiddle  <opk@zsh.org>

	* 38043: Src/Zle/compcore.c, Src/Zle/complist.c,
	Src/Zle/zle_tricky.c: allow any completion widget to cycle matches
	for menu completion to fix reverse menu completion

2016-03-07  Peter Stephenson  <p.stephenson@samsung.com>

	* 38111: Src/parse.c: remove redundant return values from
	par_list() and par_list1().

	* users/21352: Src/subst.c, Test/A03quoting.ztst: use nulstring