@@ -49,6 +49,10 @@
 	* 38148: Completion/Unix/Command/_git: reflog: complete
 	references next to commands
 
+2016-03-12  Barton E. Schaefer  <schaefer@zsh.org>
+
+	* 38142: Src/pattern.c: signal re-entrancy, maybe
+
 2016-03-11  Daniel Shahaf  <d.s@daniel.shahaf.name>
 
 	* 38135: Src/Zle/complete.c: internal: bin_compadd: Add a
